Add comprehensive README files for all directories  Added README.md files for: - api/ - FastAPI modules and endpoints structure - core/ - Business logic and transcription modules - shared/ - User files directory with lifecycle explanation - tests/ - Testing framework and structure - models/ - Whisper models with performance comparison  Updated .gitignore: - Allow README.md files in models directory - Keep models/* exclusion for large model files  Each README explains: - Directory purpose and planned structure - Usage examples and integration points - Links to related documentation - Implementation roadmap Ready for developer onboarding with clear directory guidance

--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@ Thumbs.db
 
 # WhisperX models (large files)
 models/*
-!models/README.txt
+!models/README.*
 
 # Input files (temporary and output)
 input/!*.txt
