feat: Complete Audio Transcriber implementation with Docker support - Add FastAPI application with transcription endpoints - Implement task management with priority queue system - Add file processing logic with status tracking - Configure Docker containerization with docker-compose - Add comprehensive documentation in docs/ folder - Simplify technical specification (remove code examples) - Update .gitignore to exclude audio files from shared/ - Clean up shared/ directory (keep only README and test generator) - Add WhisperX integration with timeout and retry logic - Implement debug mode with detailed error responses

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 # Virtual environments
 .venv/
-venv/
 env/
-output/
 
 # Python cache
 __pycache__/
@@ -21,16 +19,19 @@ Thumbs.db
 # WhisperX models (large files)
 models/*
 !models/README.*
+!models/init_models.py
+!models/init.sh
+!models/init.ps1
+!models/models_info.txt
 
-# Input files (temporary and output)
-input/!*.txt
+# Shared directory - exclude all files except documentation and test generator
+shared/*
+!shared/README.md
+!shared/create_sample_mp3.py
 
-# Processing files (temporary and output)
-output/*.txt
-output/*.in_process
-manual/*
+# Logs
+*.log
+logs/
 
-# Test and sample files (optional - uncomment if needed)
-# input/sample.*
-# output/sample.*
-cache/
+# Docker
+.env
