--- a/requirements.txt
+++ b/requirements.txt
@@ -1,139 +1,25 @@
-# Инструкция по ручной установке модели Whisper/Faster-Whisper для Windows
-# 1. Перейдите на страницу модели, например: https://huggingface.co/Systran/faster-whisper-small
-# 2. Скачайте все файлы модели вручную (weights, config, vocabulary и др.).
-# 3. Поместите скачанные файлы в папку: models/faster-whisper-small
-# 4. Для запуска whisperx используйте параметр --model_dir:
-#    python -m whisperx input/sample.oga --output_dir output --output_format txt --language ru --device cpu --model_dir models/faster-whisper-small
-# 5. Если возникает ошибка с симлинками, выполните в PowerShell:
-#    $env:HF_HUB_DISABLE_SYMLINKS=1
-# 6. Все зависимости должны быть установлены через requirements.txt:
-#    pip install -r requirements.txt
-#
-# После этих шагов whisperx будет использовать локальные файлы модели и не обращаться к HuggingFace Hub.
-#
-# Для других моделей используйте соответствующую папку и ссылку.
-#
-# Пример для запуска:
-# python -m whisperx input/sample.oga --output_dir output --output_format txt --language ru --device cpu --model_dir models/faster-whisper-small
-#
-# Пример для запуска с поддержкой float32 (решает ошибку ValueError: Requested float16 compute type...)
-# python -m whisperx input/sample.oga --output_dir output --output_format txt --language ru --device cpu --model_dir models/faster-whisper-small --compute_type float32
-#
-# Если требуется диаризация или VAD, убедитесь, что соответствующие модели также скачаны вручную.
+# Core API dependencies
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+pydantic==2.4.2
+python-multipart==0.0.6
 
-# Audio Transcription Tool Requirements
-# Core dependencies for the WhisperX audio transcription program
-
-# YAML configuration parsing
-pyyaml>=6.0
-
-# System and process utilities (for checking WhisperX processes)
-psutil>=5.9.0
-
-# Built-in modules (no installation required):
-# json - built-in module
-# pathlib - built-in module
-# os - built-in module
-# shutil - built-in module
-# datetime - built-in module
-# re - built-in module
-# subprocess - built-in module
-# signal - built-in module
-# logging - built-in module
-
-# Note: WhisperX should be installed separately following the installation guide
-# pip install whisperx
-
-coloredlogs==15.0.1
-colorlog==6.10.1
-contourpy==1.3.3
-ctranslate2==4.6.0
-cycler==0.12.1
-docopt==0.6.2
-einops==0.8.1
-faster-whisper==1.2.0
-filelock==3.20.0
-flatbuffers==25.9.23
-fonttools==4.60.1
-frozenlist==1.8.0
-fsspec==2025.9.0
-greenlet==3.2.4
-huggingface-hub==0.36.0
-humanfriendly==10.0
-HyperPyYAML==1.2.2
-idna==3.11
-Jinja2==3.1.6
-joblib==1.5.2
-julius==0.2.7
-kiwisolver==1.4.9
-lightning==2.5.5
-lightning-utilities==0.15.2
-Mako==1.3.10
-markdown-it-py==4.0.0
-MarkupSafe==3.0.3
-matplotlib==3.10.7
-mdurl==0.1.2
-mpmath==1.3.0
-multidict==6.7.0
-networkx==3.5
-nltk==3.9.2
-numpy==2.0.2
-omegaconf==2.3.0
-onnxruntime==1.23.2
-optuna==4.5.0
-packaging==25.0
-pandas==2.2.3
-pillow==12.0.0
-primePy==1.3
-propcache==0.4.1
-protobuf==6.33.0
-pyannote.audio==3.4.0
-pyannote.core==5.0.0
-pyannote.database==5.1.3
-pyannote.metrics==3.2.1
-pyannote.pipeline==3.0.1
-pycparser==2.23
-Pygments==2.19.2
-pyparsing==3.2.5
-pyreadline3==3.5.4
-python-dateutil==2.9.0.post0
-pytorch-lightning==2.5.5
-pytorch-metric-learning==2.9.0
-pytz==2025.2
-PyYAML==6.0.3
-regex==2025.10.23
-requests==2.32.5
-rich==14.2.0
-ruamel.yaml==0.18.16
-ruamel.yaml.clib==0.2.14
-safetensors==0.6.2
-scikit-learn==1.7.2
-scipy==1.16.3
-semver==3.0.4
-sentencepiece==0.2.1
-setuptools==80.9.0
-shellingham==1.5.4
-six==1.17.0
-sortedcontainers==2.4.0
-soundfile==0.13.1
-speechbrain==1.0.3
-SQLAlchemy==2.0.44
-sympy==1.14.0
-tabulate==0.9.0
-tensorboardX==2.6.4
-threadpoolctl==3.6.0
-tokenizers==0.22.1
-torch==2.8.0
-torch-audiomentations==0.12.0
-torch_pitch_shift==1.2.5
-torchaudio==2.8.0
-torchmetrics==1.8.2
-tqdm==4.67.1
-transformers==4.57.1
-typer==0.20.0
-typing_extensions==4.15.0
-tzdata==2025.2
-urllib3==2.5.0
-wheel==0.45.1
+# Audio processing
 whisperx==3.7.4
-yarl==1.22.0
+torch==2.8.0
+torchaudio==2.8.0
+faster-whisper==1.0.3
+
+# File and system utilities
+psutil==5.9.6
+watchdog==3.0.0
+huggingface_hub==0.19.4
+
+# Development and testing
+pytest==7.4.3
+pytest-asyncio==0.21.1
+httpx==0.25.1
+
+# Additional utilities
+pyyaml==6.0.1
+python-jose[cryptography]==3.3.0
